[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main/HUD.gd" type="Script" id=1]
[ext_resource path="res://Spell_Icon.png" type="Texture" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="SpellLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
text = "HELLO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spell_Icons" type="Node2D" parent="."]

[node name="Spell_Icon1" type="Sprite" parent="Spell_Icons"]
position = Vector2( 450, 500 )
texture = ExtResource( 2 )

[node name="Spell_Icon2" type="Sprite" parent="Spell_Icons"]
position = Vector2( 500, 500 )
texture = ExtResource( 2 )

[node name="Spell_Icon3" type="Sprite" parent="Spell_Icons"]
position = Vector2( 550, 500 )
texture = ExtResource( 2 )
